# odbc-scanner

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml  ODBCScanner.yml
duckdb_capi/: duckdb.h
resources/data/: nl_stations_ora.sql  nl_stations_short.csv
resources/examples/odbc_copy/: copy_lineitem.sql
resources/examples/oracle_copy_from/: copy_lineitem.sql
resources/examples/oracle_inserts_python/: lineitem_inserts.py
resources/scripts/: format.py  prepare_test_db.py  pyodbc_version.py  run_sqllogic_tests.py
src/: binary.cpp  capi_entry_point.cpp  capi_odbc_scanner.c  columns.cpp  common.cpp  connection.cpp  dbms_quirks.cpp  diagnostics.cpp  fetch.cpp  odbc_close.cpp  odbc_connect.cpp  odbc_connection.cpp  odbc_params.cpp  odbc_query.cpp  odbc_scanner.cpp  params.cpp  registries.cpp  scanner_value.cpp  strings.cpp  types.cpp  widechar.cpp
src/functions/: odbc_bind_params.cpp  odbc_connect.cpp  odbc_copy.cpp  odbc_copy_from.cpp  odbc_create_params.cpp  odbc_list_data_sources.cpp  odbc_list_drivers.cpp  odbc_query.cpp  testdb
src/include/: binary.hpp  capi_entry_point.hpp  capi_odbc_scanner.h  capi_pointers.hpp  column_bind.hpp  columns.hpp  common.hpp  connection.hpp  dbms_quirks.hpp  decimal_chars.hpp  diagnostics.hpp  fetch.hpp  make_unique.hpp  mappings.hpp  odbc_api.hpp  odbc_connection.hpp  odbc_scanner.hpp  params.hpp  query_context.hpp  registries.hpp  scanner_exception.hpp  scanner_value.hpp  strings.hpp  temporal.hpp  types.hpp  widechar.hpp
src/include/types/: type_bigint.hpp  type_integer.hpp  type_null.hpp  type_varchar.hpp  types.hpp
src/mappings/: db2_mapping.cpp  firebird_mapping.cpp  generic_mapping.cpp  mappings.cpp  mssql_mapping.cpp  oracle_mapping.cpp
src/types/: blob_type.cpp  bool_type.cpp  date_types.cpp  decimal_type.cpp  float_types.cpp  integer_types.cpp  null_type.cpp  temporal_types.cpp  type_bigint.cpp  type_integer.cpp  type_null.cpp  type_varchar.cpp  types.cpp  uuid_type.cpp  varchar_type.cpp
test/: CMakeLists.txt  test_basic.cpp  test_common.cpp  test_common.hpp  test_copy.cpp  test_dates.cpp  test_decimal.cpp  test_list_env.cpp  test_long_strings.cpp  test_odbc_scanner.cpp  test_params.cpp  test_version.cpp
test/sql/: close.test  connect.test  list_env.test  odbc_scanner.test  params_handle.test  query_basic.test  query_multi.test  query_params.test  type_bigint.test  type_date.test  type_decimal.test  type_integer.test  type_smallint.test  type_time.test  type_timestamp.test  type_tinyint.test  type_ubigint.test  type_uinteger.test  type_usmallint.test  type_utinyint.test  zfailure.test
test/sql/clickhouse/: clickhouse_version.test
test/sql/db2/: 07_decimal.test  09_time.test  10_timestamp.test  11_date.test  12_char.test  13_varchar.test  14_clob.test  15_binary.test  16_varbinary.test  17_blob.test  20_dbclob.test  README.md  copy_from.test
test/sql/duckdb/: copy_from.test  direct_conn_string.test  query_basic.test  user_quirks.test
test/sql/firebird/: 01_varchar.test  02_char.test  03_integer.test  04_numeric.test  05_float.test  06_date.test  07_time.test  08_timestamp.test  09_boolean.test  10_basic_queries.test  11_binary.test  11_integer.test  12_int128.test  12_uuid.test  13_decfloat.test  14_time_with_time_zone.test  15_smallint.test  15_timestamp_with_time_zone.test  16_nchar.test  17_blob.test  18_blob_sub_type_text.test  README.md  firebird_copy.test  firebird_version.test
test/sql/mssql/: 01_tinyint.test  02_smallint.test  03_int.test  04_bigint.test  05_bit.test  06_decimal.test  07_numeric.test  08_money.test  09_smallmoney.test  10_float.test  11_real.test  12_date.test  13_time.test  14_datetime2.test  15_datetimeoffset.test  16_datetime.test  17_smalldatetime.test  18_char.test  19_varchar.test  20_text.test  21_nchar.test  22_nvarchar.test  23_ntext.test  26_image.test  36_uniqueidentifier.test  README.md  copy_from.test  mssql_version.test  type_datetime.test  version.test
test/sql/mysql/: mysql_date.test  mysql_decimal.test  mysql_integer.test  mysql_params.test  mysql_params_handle.test  mysql_version.test
test/sql/oracle/: 03_number.test  06_date.test  12_interval_year_to_month.test  13_interval_day_to_second.test  README.md  copy_from.test
test/sql/postgres/: postgres_version.test
test/sql/snowflake/: 01_number.test  02_float.test  03_double.test  04_varchar.test  05_binary.test  07_date.test  08_time.test  10_timestamp_ltz.test  README.md
